--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                     <a href="#contact">Contact</a>
                 </div>
                 <div class="footer-bottom">
-                    <p>&copy; 2025 Aditya Bhatt. All Rights Reserved.</p>
+                    <p>&copy; 2025 Sajjad khan. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
